<resources>
    <string name="app_name">HomeService</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hint_username">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="hint_cartao">Número do cartão</string>
    <string name="hint_nome_cartao">Nome impresso no cartão</string>
    <string name="hint_cartao_mes">Mês</string>
    <string name="hint_cartao_ano">Ano</string>
    <string name="hint_cartao_cvv">Codigo de segurança</string>

    <string name="button_in">Entrar</string>
    <string name="button_cadastrar">Cadastrar</string>
    <string name="button_avancar">Avançar</string>
    <string name="button_finalizar_compra">Finalizar Compra</string>
    <string name="button_fechar">Fechar</string>
    <string name="button_enviar">Enviar</string>
    <string name="button_comprar">Comprar</string>
    <string name="button_data">Escolher data</string>
    <string name="button_atualizar">Atualizar</string>


    <string name="load_login">Verificando credenciais</string>
    <string name="load_categorias">Recuperando categorias</string>
    <string name="load_servicos">Recuperando serviços</string>

    <string name="error_fail_login">E-mail ou senha incorretos</string>
    <string name="error_email_empty">E-mail não pode ser vazio</string>
    <string name="error_email_existente">E-mail já cadastrado</string>
    <string name="error_password_empty">Senha não pode ser vazia</string>
    <string name="error_password_small">Senha não pode ter menos que 6 caracteres</string>
    <string name="error_password_confirmacao">Confirmação de senha incorreta</string>
    <string name="error_cep">Digite um CEP válido</string>
    <string name="error_campos">Preencha todos os campos</string>
    <string name="error_data">Preencha a data de nascimento</string>
    <string name="error_cpf">CPF inválido</string>
    <string name="error_sexo">Selecione o sexo</string>
    <string name="error_numero_cartao">Número do cartão inválido</string>
    <string name="error_mes">Mês inválido</string>
    <string name="error_ano">Ano inválido</string>
    <string name="error_cvv">Código de segurança inválido</string>

    <string name="drawer_inicio">Inicio</string>
    <string name="drawer_avisos">Avisos</string>
    <string name="drawer_compras">Minhas Compras</string>
    <string name="drawer_editar_perfil">Editar Perfil</string>
    <string name="drawer_sair">Sair</string>

    <string-array name="stepLabels">
        <item>Confirme Serviço</item>
        <item>Endereço</item>
        <item>Pagamento</item>
        <item>Finalizado</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
