<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/drawer_inicio" />
        <item
            android:id="@+id/nav_avisos"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/drawer_avisos" />
        <item
            android:id="@+id/nav_compras"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/drawer_compras" />
        <item
            android:id="@+id/nav_editar"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/drawer_editar_perfil" />
        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_eject_black_24dp"
            android:title="@string/drawer_sair" />
    </group>

</menu>
